upd: overflow bug fix

--- a/client/src/components/UI/BannerImage/BannerImage.module.scss
+++ b/client/src/components/UI/BannerImage/BannerImage.module.scss
@@ -1,4 +1,6 @@
 .BannerImage {
+    width: 100%;
+    height: 100%;
     img {
         width: 100%;
         height: 100%;
